<resources>
    <string name="app_name">Расчет килокалорий</string>
    <string name="TextView1">Примерная суточная норма калорий</string>
    <string name="Height">Рост (в см)</string>
    <string name="Weight">Вес (в кг)</string>
    <string name="Age">Возраст (в годах)</string>
    <string name="Calculate">Рассчитать</string>
    <string name="ActionLevel">Уровень активности</string>
    <string name="Male">Мужчина</string>
    <string name="Female">Женщина</string>
    <string name="gender">Пол</string>
    <string name="MainText">Расчет калорий</string>
    <string name="MainTextLosingWeight">Расчет калорий для сброса веса</string>
    <string name="MainTextMaintainingWeight">Расчет калорий для поддержания веса</string>
    <string name="MainTextGainingWeight">Расчет калорий для набора веса</string>
    <string name="beginKkal">0</string>

    <string name="TypeCalculateLose">Сброс веса </string>
    <string name="TypeCalculateMaintain">Поддержка веса </string>
    <string name="TypeCalculateGain">Набор веса</string>

    <string name="ResultCalculate">Резльтат: </string>
    <string name="TypeCalculate">Тип расчета: </string>
    <string name="Date">Дата: </string>

    <string name="ToolBarLose">Сброс веса</string>
    <string name="ToolBarMaintain">Поддержание веса</string>
    <string name="ToolbarGain">Набор веса</string>
    <string name="HistoryCalculate">История расчетов</string>

    <string name="errorHeightNull">Рост не может быть пустым</string>
    <string name="errorHeightLimit">Рост может быть в пределах от 130 до 210</string>
    <string name="errorWeightNull">Вес не может быть пустым</string>
    <string name="errorWeightLimit">Вес может быть в перелах от 30 до 200</string>
    <string name="errorAgeNull">Возраст не может быть пустым</string>
    <string name="errorAgeLimit">Возраст может быть в пределах от 1 до 100</string>
    <string name="errorChooseGender">Выберите пол</string>

    <string-array name="ActionLevels">
        <item>Низкий (никаких физических нагрузок)</item>
        <item>Средний (физические нагрузки 3–5 раз в неделю)</item>
        <item>Высокий (ежедневные физические нагрузки)</item>
    </string-array>


    <string name="StartServiceStepCount">Начать подсчет шагов</string>
    <string name="StopServiceStepCount">Закончить подсчет шагов</string>
    <string name="TextViewStepCount">Подсчет шагов</string>
    <string name="LinkWiki">https://ru.qwe.wiki/wiki/Harris%E2%80%93Benedict_equation</string>
    <string name="OpenLink">Открыть</string>
    
    <string-array name="color_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>