<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGaining">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentMaintaining">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="316dp"
            android:layout_height="37dp"
            android:layout_marginTop="28dp"
            android:text="@string/TextView1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

        <TextView
            android:id="@+id/textViewCalorie"
            android:layout_width="123dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:text="@string/beginKkal"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:layout_constraintVertical_bias="0.012" />

        <EditText
            android:id="@+id/editTextPersonHeight"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Height"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPersonWeight"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Weight"
            android:inputType="number"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonHeight"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPersonAge"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Age"
            android:inputType="number"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonWeight"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/spinnerActionLevel"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginTop="40dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:entries="@array/ActionLevels"
            android:prompt="@string/ActionLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonAge" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="356dp"
            style="@style/Widget.AppCompat.EditText"
            android:layout_height="43dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerActionLevel">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:text="@string/Female" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerActionLevel"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActionLevel"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/spinnerActionLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonAge"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="165dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:text="@string/Calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/MainTextGainingWeight"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>