<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.lab1.viewModel.FragmentMaintainingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="316dp"
            android:layout_height="37dp"
            android:layout_marginTop="28dp"
            android:text="@string/TextView1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

        <TextView
            android:id="@+id/textViewCalorie"
            android:layout_width="123dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:text="@={viewModel.MCalorie}"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:layout_constraintVertical_bias="0.012" />

        <EditText
            android:id="@+id/editTextPersonHeight"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Height"
            android:inputType="number"
            android:text="@={viewModel.MPersonHeight}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPersonWeight"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Weight"
            android:inputType="number"
            android:text="@={viewModel.MPersonWeight}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonHeight"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextPersonAge"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Age"
            android:inputType="number"
            android:text="@={viewModel.MPersonAge}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonWeight"
            tools:ignore="LabelFor" />

        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="356dp"
            android:layout_height="43dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:checked="@={viewModel.MIsMale}"
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:checked="@={viewModel.MIsFemale}"
                android:text="@string/Female" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActionLevel"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonAge" />

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="165dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.calculatedCalorie()}"
            android:text="@string/Calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="379dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/MainTextMaintainingWeight"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="357dp"
            android:layout_height="125dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">


            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.MIsLowLevel}"
                android:text="@string/low_level" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.MIsMidLevel}"
                android:text="@string/mid_level" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.MIsHardLevel}"
                android:text="@string/hard_level" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>