<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentStepCounter">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context= ".FragmentStepCounter">

        <TextView
            android:id="@+id/textView_step_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginLeft="132dp"
            android:layout_marginTop="200dp"
            android:text=""
            android:textSize="128sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_start_service"
            android:layout_width="227dp"
            android:layout_height="48dp"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="48dp"
            android:text="@string/StartServiceStepCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_step_count" />

        <Button
            android:id="@+id/button_stop_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="24dp"
            android:text="@string/StopServiceStepCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start_service" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="259dp"
            android:layout_height="150dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/TextViewStepCount"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>